--- a/style.css
+++ b/style.css
@@ -1,10 +1,38 @@
-h1 {
-    color: green;
-  }
-h2 {
-    color: green;
+
+h1,h2,h3 {
+    font-family: 'Oswald', sans-serif;
+    line-height:1.2;
 }
+
 img {
     height: 200px;
     border-style: double;
+  }
+  
+p, ul, tbody {
+  font-family: 'Open Sans', sans-serif;
+}
+
+table {
+  border-collapse: separate;
+  border-spacing: 70px 0;
+}
+
+td {
+  padding: 10px 0;
+}
+
+body{margin:40px auto;
+  max-width:780px;
+  line-height:1.6;
+  font-size:18px;
+  color:#444;
+  padding:0 10px}
+
+  blockquote {
+    font-family: 'Open Sans', sans-serif;
+    background: #f9f9f9;
+    border-left: 10px solid #ccc;
+    margin: 1.5em 10px;
+    padding: 0.5em 10px;
   }
