--- a/esame_RetiC/style.css
+++ b/esame_RetiC/style.css
@@ -1,4 +1,3 @@
-
 h1,h2,h3 {
     font-family: 'Oswald', sans-serif;
     line-height:1.2;
@@ -9,7 +8,7 @@ img {
   max-width: 300;
   height: auto;
   border-style: double;
-  }
+}
   
 p, ul, tbody {
   font-family: 'Open Sans', sans-serif;
@@ -24,17 +23,19 @@ td {
   padding: 10px 0;
 }
 
-body{margin:40px auto;
+body{
+  margin:40px auto;
   max-width:780px;
   line-height:1.6;
   font-size:18px;
   color:#444;
-  padding:0 10px}
+  padding:0 10px
+}
 
-  blockquote {
+blockquote {
     font-family: 'Open Sans', sans-serif;
     background: #f9f9f9;
     border-left: 10px solid #ccc;
     margin: 1.5em 10px;
     padding: 0.5em 10px;
-  }
+}
