--- a/esame_RetiC/style.css
+++ b/esame_RetiC/style.css
@@ -28,14 +28,15 @@ body{
   max-width:780px;
   line-height:1.6;
   font-size:18px;
-  color:#444;
+  color: #e3e3e3;
+  background-color: black;
   padding:0 10px
 }
 
 blockquote {
     font-family: 'Open Sans', sans-serif;
-    background: #f9f9f9;
-    border-left: 10px solid #ccc;
+    background: #8080ff;
+    border-left: 10px solid #0000ff;
     margin: 1.5em 10px;
     padding: 0.5em 10px;
 }
